# platercg

./: .travis.yml  CMakeLists.txt  README.md  platercg.pc.in
include/platercg/: Character.hpp  IStrategy.hpp  KnnStrategy.hpp  PlateRcg.hpp  knn_rcg.hpp  plate.hpp  platercg.hpp
platercg/: Character.cpp  KnnStrategy.cpp  character.cpp  knn_rcg.cpp
